Fix cc select menu bug on smaller screens

--- a/public/styles/account_mobile.css
+++ b/public/styles/account_mobile.css
@@ -125,7 +125,7 @@
   }
 
   .add-cc .selectbox:first-of-type {
-  	margin-right: 0.9em;
+  	margin-right: 0.7em;
   }
 
   .select-arrow:after {
